--- a/public_html/home.html
+++ b/public_html/home.html
@@ -24,7 +24,7 @@ and open the template in the editor.
             <nav class="menu-opcoes">
                 <ul>
                     <li><a href="#">Sua Conta</a></li>
-                    <li><a href="#">Lista de Desejos</a></li>
+                    <li><a href="checkout.html">Lista de Desejos</a></li>
                     <li><a href="#">Cartão Fidelidade</a></li>
                     <li><a href="sobre.html">Sobre</a></li>
                     <li><a href="#">Ajuda</a></li>
