--- a/public_html/index.html
+++ b/public_html/index.html
@@ -21,10 +21,11 @@ and open the template in the editor.
             <nav>
                 <ul>
                     <li><a href="#">Sua Conta</a></li>
-                    <li><a href="#">Lista de Desejos</a></li>
+                    <li><a href="checkout.html">Lista de Desejos</a></li>
                     <li><a href="#">Cartão Fidelidade</a></li>
                     <li><a href="sobre.html">Sobre</a></li>
                     <li><a href="#">Ajuda</a></li>
+                    <li><a href="table.html">Vips</a></li>
                 </ul>
             </nav>
         </header>
